--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="basket-img" src="https://cdn-icons.flaticon.com/png/512/3177/premium/3177093.png?token=exp=1648993603~hmac=f6dd4dc6532902f4a1f6a5406ed9805f" alt="basket-img">
+        <img class="basket-img" src="https://cdn-icons.flaticon.com/png/512/3177/premium/3177093.png?token=exp=1649057891~hmac=5b3ad47dbd756c6ff547b11e525aa822" alt="basket-img">
         <h3>Lorem & Ipsum</h3>
         <p class="basket-discript"> Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
@@ -50,19 +50,18 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <h3>If you love hot wings as much as I do.</h3>
+      <p class="get-touch">Love hot wings as much as I do? Let's talk about how awesome they are! <br /> We can code while we eat hot wings!</p>
+      <a class="btn" href="mailto:fwipace@naver.com">CONTACT ME</a>
     </div>
   </div>
 
 
-
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© Name Surname.</p>
+    <a class="footer-link_link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link_twit" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link_web" href="https://www.appbrewery.co/">Website</a>
+    <p class="right">© 2022 Andrew Kang @Linkidea</p>
   </div>
 
 
